# PDF-Question-Answering-System--RAG-Based-

./: .env  .env.example  .gitignore  OLLAMA_SETUP.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RESTART_INSTRUCTIONS.md  RUN_NOW.md  START_HERE.md  WORKING_CONFIG.md  directory_structure.txt  pyproject.toml  requirements.txt  setup.py
configs/: logging_config.yaml  model_config.yaml  rag_config.yaml
data/: README.md
docs/: architecture.md
pdf_rag_app/: main.py  pdf_loader.py  rag.py  requirements.txt
src/pdf_rag/ui/: streamlit_app.py
src/pdf_rag/utils/: config_loader.py  text_processing.py
